--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,10 @@ aiofiles==24.1.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.14
 aiosignal==1.4.0
+Flask==3.1.0
+flask-cors==5.0.1
+gunicorn==21.2.0
+
 appdirs==1.4.4
 astunparse==1.6.3
 attrs==25.3.0
@@ -85,4 +89,5 @@ wheel==0.45.1
 Wikipedia-API==0.8.1
 wrapt==1.17.2
 yarl==1.20.1
+
 
